Mobile optimization for index.html. Fixed jumpy height bug in the header, improved font consistency. Readability fix for Blog.html

--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,55 @@ section{
     height: auto;
 }
 
+/*
+.home {
+    position: relative;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    background: rgba(88, 179, 65, .5);
+}
+*/
 
 .btn-success{
   letter-spacing: 4px;
 }
+
 
 .vimeo-player{
   margin-left: auto;
   margin-right: auto;
   display: block;
   margin-top: 75px;
+}
+
+@media screen and (max-width: 924px) {
+    .vimeo-player {
+        
+    }
 }
 
 a:hover{
@@ -162,6 +201,7 @@ h6{
 
 /*---nav bar link styles---*/
 .navbar-default .navbar-nav .navbar-login{
+  border-bottom: none;
   background-color: #4e9a34;
   margin-left: 10px;
   padding-left: 20px;
@@ -181,6 +221,7 @@ h6{
 .navbar-default .navbar-nav > li > a {
 color: #fff;
 padding: 7px;
+border-bottom: 3px solid transparent;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
@@ -254,14 +295,26 @@ color: #fff;
   margin-left: auto;
   margin-right: auto;
   display: block;
+  -webkit-transition: all 0.5s cubic-bezier(0, 1.8, 1, 1.8);
+  -moz-transition: all 0.5s cubic-bezier(0, 1.8, 1, 1.8);
+  -ms-transition: all 0.5s cubic-bezier(0, 1.8, 1, 1.8);
+  -o-transition: all 0.5s cubic-bezier(0, 1.8, 1, 1.8);
+  transition: all 0.5s cubic-bezier(0, 1.8, 1, 1.8);
 }
 
 .college-icon h2{
-  font-family: "Garamond", "Times New Roman";
+  font-family: "Helvetica Neue", Arial, Sans-Serif;
   font-size:12px;
   margin-top:8px;
 }
 
+.college-icon:hover {
+    -webkit-transform: scale(1.1, 1.1);
+    -moz-transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -o-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+}
 
 #you-in h1, #you-in h2{
   color: #fff;
@@ -269,52 +322,129 @@ color: #fff;
 
 .fall-image{
   position: relative;
+    height: auto;
 }
 
 
 
 
 
-@media (max-width: 4000px){
+@media screen and (max-width: 4000px){
 
   .fall-image-text{
     position: absolute;
     width: 100%;
     top: 156px;
   }
+    
+  .you-in-links {
+    padding: 0;
+    list-style: none;
+  }
+    
+  .you-in-links li {
+    padding: 0 .5em 0 .5em; 
+    display: inline-block;
+  }
 }
 
-@media (max-width: 1080px){
+@media screen and (max-width: 1080px){
 
   .fall-image-text{
     position: absolute;
     width: 100%;
     top: 120px;
   }
+    
+  .you-in-links {
+    padding: 0;
+    list-style: none;
+  }
+    
+  .you-in-links li {
+    padding: 0 .5em 0 .5em; 
+    display: inline-block;
+  }
+
 }
 
 
-@media (max-width: 767px){
+@media screen and (max-width: 767px){
 
   .fall-image-text{
     position: absolute;
     width: 100%;
     top: 42px;
   }
+    
+  .fall-image-text h1 {
+    font-size: 2.5em;   
+  }
+    
+  .you-in-links {
+    padding: 0;
+    list-style: none;
+  }
+    
+  .you-in-links li {
+    padding: .5em 0 .5em 0;  
+    display: block;
+  }
+    
+  .fall-image-text h2{
+    display: none;
+  }
 }
 
 
 
-@media (max-width: 500px){
+@media screen and (max-width: 500px){
 
   .fall-image-text{
     position: absolute;
     width: 100%;
     top: 16px;
   }
+
+  .fall-image-text h1 {
+    font-size: 2.5em;   
+  }
+
   .fall-image-text h2{
     display: none;
   }
+
+  .you-in-links {
+    padding: 0;
+    list-style: none;
+  }
+    
+  .you-in-links li {
+    padding: .5em 0 .5em 0;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 400px) {
+.fall-image-text {
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+
+.fall-image-text h1 {
+    font-size: 3em;   
+}
+
+.you-in-links {
+    padding: 0;
+    list-style: none;
+}
+
+.you-in-links li {
+    padding: .5em 0 .5em 0;  
+    display: block;
+}
 }
 
 
@@ -357,6 +487,18 @@ body{
   text-align: center;
   padding: 10px 10px;
   line-height: 1.4em;
+  font-size: .7em;
+}
+
+@media screen and (min-width: 768px) {
+    .opening-sent{
+        z-index: -1;
+        text-align: center;
+        padding: 10px 10px;
+        line-height: 1.4em;
+        font-size: 1em;
+    }
+    
 }
 
 .opening-sent-2 h2{
@@ -625,6 +767,13 @@ width: 300px;
 
 .home-page-row{
 margin-top: 25px;
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .home-page-row {
+           text-align: left;
+    }
 }
 
 @media (min-width: 925px){
@@ -1398,7 +1547,7 @@ font-weight:300;
 }
 
 #playbook h2{
-font-family: "Garamond", "Times New Roman";
+font-family: "Helvetica Neue", Arial, Sans-Serif;
 font-size: 1.5em;
 }
 
@@ -1409,10 +1558,19 @@ font-size: 1.5em;
 }
 
 /*--Quick Looks Blog--*/
+#blog {
+    font-family: "Helvetica Neue", Arial, Sans-Serif;
+}
+
+.blog-header {
+    text-align: center;   
+}
+
 .blog-post{
   background-color: #ededed;
-  padding: 0 10px 10px 10px;
-  margin: 5px 0;
+  padding: 30px 15px 10px 15px;
+  margin: 2em 0;
+  line-height: 1.6;
 }
 #blog h2{
   margin: 0 auto;
@@ -1421,8 +1579,9 @@ font-size: 1.5em;
 }
 
 #blog h3{
-  font-family: "Garamond","Times New Roman";
-  font-size: 12px;
+  font-family: "Helvetica Neue", Arial, Sans-Serif;
+  font-size: 20px;
+  font-weight: 400;
   margin: 0 auto;
   padding-top:10px;
 }
@@ -1435,17 +1594,19 @@ ul.blog-post-list{
 }
 
 ul.blog-post-list li{
-  font-family: "Garamond";
+  font-family: "Helvetica Neue", Arial, Sans-Serif;
+  font-size: 16px;
 }
 
 ul.blog-post-list-1 li{
-  font-family: "Garamond";
+  font-family: "Helvetica Neue", Arial, Sans-Serif;
   list-style-type: circle;
+  font-size: 16px;
 }
 
 /*--newsfeed */
 .newsfeed a{
-  font-family: "Helvetica";
+  font-family: "Helvetica Neue", Arial, Sans-Serif;
   color: #63b258;
   font-size:12px;
 }
@@ -1479,7 +1640,7 @@ ul.blog-post-list-1 li{
 }
 
 .company-name{
-  font-family: "Helvetica";
+  font-family: "Helvetica Neue", Arial, Sans-Serif;
   padding: 30px 0 15px 30px;
   color: #000;
   font-size: 20px;
